优化杠杆设置逻辑：区分权限错误和速率限制，添加 SKIP_LEVERAGE_SETUP 选项

--- a/env.example
+++ b/env.example
@@ -18,3 +18,11 @@ FEISHU_WEBHOOK=https://open.feishu.cn/open-apis/bot/v2/hook/your_webhook_url
 # Flask 服务端口（可选，默认 80）
 PORT=80
 
+# 交易配置（可选）
+LEVERAGE=3
+RISK_PCT=0.01
+QTY_PRECISION=3
+
+# 跳过杠杆设置（可选，如果 API 密钥没有权限设置杠杆，设置为 true）
+SKIP_LEVERAGE_SETUP=false
+
