添加现货交易支持：支持期货和现货两种交易模式，可通过 TRADE_TYPE 环境变量切换

--- a/env.example
+++ b/env.example
@@ -1,6 +1,9 @@
 # Binance 模式: testnet 或 main
 BINANCE_MODE=testnet
 
+# 交易类型: futures（期货）或 spot（现货）
+TRADE_TYPE=spot
+
 # Binance Testnet API 密钥
 BINANCE_TEST_API_KEY=your_test_api_key_here
 BINANCE_TEST_API_SECRET=your_test_api_secret_here
